[gd_scene load_steps=3 format=3 uid="uid://dr17rktyltso7"]

[ext_resource type="Script" path="res://src/ui/menus/debug_menu.gd" id="1_ndqeq"]
[ext_resource type="Theme" uid="uid://c21dhy264y6ty" path="res://assets/theme_large.tres" id="2_uwnto"]

[node name="DebugMenu" type="Node2D"]
script = ExtResource("1_ndqeq")

[node name="Center" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(1920, 1080)
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("2_uwnto")

[node name="Panel" type="PanelContainer" parent="Center"]
custom_minimum_size = Vector2(1600, 1000)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Center/Panel"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="Center/Panel/VBox"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="Center/Panel/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 10
text = "Close"

[node name="Menu" type="VBoxContainer" parent="Center/Panel/VBox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Card" type="Button" parent="Center/Panel/VBox/Menu"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "Add Any Card"

[node name="Enhance" type="Button" parent="Center/Panel/VBox/Menu"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "Enhance"

[node name="Structure" type="Button" parent="Center/Panel/VBox/Menu"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "Structure"

[node name="Blessing" type="Button" parent="Center/Panel/VBox/Menu"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "Blessing"

[node name="Event" type="Button" parent="Center/Panel/VBox/Menu"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "Trigger Event"

[node name="Attack" type="Button" parent="Center/Panel/VBox/Menu"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "Pick Blight Attack"

[node name="Year" type="Button" parent="Center/Panel/VBox/Menu"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "+1 Year"

[node name="SelectOptions" type="GridContainer" parent="Center/Panel/VBox"]
layout_mode = 2
columns = 4

[node name="SelectOptions2" type="VBoxContainer" parent="Center/Panel/VBox"]
layout_mode = 2

[connection signal="pressed" from="Center/Panel/VBox/Header/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="Center/Panel/VBox/Menu/Card" to="." method="_on_card_pressed"]
[connection signal="pressed" from="Center/Panel/VBox/Menu/Enhance" to="." method="_on_enhance_pressed"]
[connection signal="pressed" from="Center/Panel/VBox/Menu/Structure" to="." method="_on_structure_pressed"]
[connection signal="pressed" from="Center/Panel/VBox/Menu/Blessing" to="." method="_on_blessing_pressed"]
[connection signal="pressed" from="Center/Panel/VBox/Menu/Event" to="." method="_on_event_pressed"]
[connection signal="pressed" from="Center/Panel/VBox/Menu/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="Center/Panel/VBox/Menu/Year" to="." method="_on_year_pressed"]
